--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     /* width: 100vw;
     height: 100vh; */
     font-family: 'Bangers', cursive;
+    display: none;
 }
 
 #layer1, #layer2, #layer3, #layer4, #player, #angler1, #angler2, #lucky, #projectile, #gears, #hivewhale, #drone, #smokeExplosion, #fireExplosion, #bulbwhale, #moonfish, #shield, #fireball, #stalker, #razorfin {
