--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #4d79bc;
+    /* background: #4d79bc; */
     max-width: 100%;
     max-height: 100%;  
     /* width: 100vw;
